# HelloOpenGL

./: .gitignore  CMakeLists.txt  README.md  draw  main.cpp  shader.h
include/: camera.h  config.h  data.h  shader.h  utils.h
src/: camera.cpp  config.cpp  data.cpp  main.cpp  shader.cpp
src/shader/: fshader.fs  vshader.vs
